force-app/src/objects/CTPISA__Packing_Slip_Scan__c.object
<CustomObject>
    <fields>
        <fullName>CTPISA__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Packing Slip Scans</relationshipLabel>
        <relationshipName>Packing_Slip_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__JobID__c</fullName>
        <label>JobID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__JobIsFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the OCR Job is finished and all the results are in.</description>
        <inlineHelpText>Whether the OCR Job is finished and all the results are in.</inlineHelpText>
        <label>JobIsFinished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__LastAttempt__c</fullName>
        <description>The timestamp of the last attempt of retrieving the job results from the 3rd party OCR service.</description>
        <inlineHelpText>The timestamp of the last attempt of retrieving the job results from the 3rd party OCR service.</inlineHelpText>
        <label>LastAttempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTPISA__OCR_Results_Source__c</fullName>
        <label>OCR Results Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Klippa</fullName>
                </value>
                <value>
                    <fullName>DizzyData</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__OriginalFileName__c</fullName>
        <description>The original file name of the uploaded invoice file.</description>
        <inlineHelpText>The original file name of the uploaded invoice file.</inlineHelpText>
        <label>OriginalFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Packing_Slip_Scan_Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packing Slip Scan Workflow</label>
        <referenceTo>CTPISA__InvoiceScanWorkflow__c</referenceTo>
        <relationshipLabel>Packing Slip Scans</relationshipLabel>
        <relationshipName>Packing_Slip_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__PagesAreLoading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when pages are still loading (downloaded from Cloud Team OCR Hub)</description>
        <inlineHelpText>Checked when pages currently are being downloaded. (downloaded from Cloud Team OCR Hub)</inlineHelpText>
        <label>Pages Are Loading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Purchase_Order_List__c</fullName>
        <description>Text field to store the purchase order id for Packing Slip Scan</description>
        <label>Purchase Order List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Purchase_Order__c</fullName>
        <description>Text field to store the purchase order id for Packing Slip Scan</description>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__RawJobResponse__c</fullName>
        <label>RawJobResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>PO Match Not Found</fullName>
                </value>
                <value>
                    <fullName>PO Matched</fullName>
                </value>
                <value>
                    <fullName>PO Not Found In PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__WorkflowID__c</fullName>
        <description>The workflow ID to use for OCR Processing on 3rd party side.</description>
        <inlineHelpText>The workflow ID to use for OCR Processing on 3rd party side.</inlineHelpText>
        <label>WorkflowID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Packing Slip Scan</label>
    <listViews>
        <fullName>CTPISA__All</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__OriginalFileName__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__Source__c</columns>
        <columns>CTPISA__Packing_Slip_Scan_Workflow__c</columns>
        <columns>CTPISA__Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Packing Slip Scan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Slip Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>